sample/retrieveUnpackaged/objects/QASOnDemand_Portal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>QAS Password for Portal Users</description>
    <fields>
        <fullName>Dataset__c</fullName>
        <label>Dataset</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnDemand_Endpoint__c</fullName>
        <label>OnDemand Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchEngine__c</fullName>
        <label>SearchEngine</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userid__c</fullName>
        <label>Userid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iFrame_Endpoint__c</fullName>
        <label>iFrame Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QASOnDemand Portal</label>
</CustomObject>